# ape-template

./: .clang-format  .clang-tidy  .editorconfig  .gitignore  BUILD_INSTRUCTIONS.md  CMakeLists.txt  CMakePresets.json  COMPILER_VERSIONS.md  COMPILER_VERSIONS.zh.md  CONTRIBUTING.md  INITIALIZATION_SUMMARY.md  INITIALIZATION_SUMMARY.zh.md  LICENSE  PROJECT_STRUCTURE.md  README.md  README.original.md  README.original.zh.md  README.zh.md  RENAME_CHECKLIST.md  RENAME_CHECKLIST.zh.md  conanfile.py  conanfile.txt  vcpkg.json
.github/workflows/: ci.yml  docker.yml  documentation.yml  release.yml
cmake/: ape-templateConfig.cmake.in
cmake/modules/: CompilerWarnings.cmake  CppModules.cmake  DebugSymbols.cmake  DistributedBuild.cmake  ImportStd.cmake  Sanitizers.cmake  ThirdParty.cmake
docker/android/: Dockerfile
docker/linux/: Dockerfile
docker/webassembly/: Dockerfile
docs/: CMakeLists.txt  Doxyfile.in
include/ape_template/core/: version.hpp
include/ape_template/utils/: string_utils.hpp
patches/: README.md
scripts/: docker-build.ps1  docker-build.sh  docker-shell.sh
src/: CMakeLists.txt
src/core/: CMakeLists.txt  version.cpp
src/utils/: CMakeLists.txt  string_utils.cpp
tests/: CMakeLists.txt
tests/benchmark/: CMakeLists.txt  bench_string_utils.cpp
tests/fuzz/: CMakeLists.txt  fuzz_string_utils.cpp
tests/regression/: CMakeLists.txt  regression_suite.cpp
tests/unit/: CMakeLists.txt  test_string_utils.cpp  test_version.cpp
